; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_cyclades.c_set_timeout.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_cyclades.c_set_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cyclades_port = type { %struct.cyclades_card* }
%struct.cyclades_card = type { i32 }

@CyRTPR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cyclades_port*, i64)* @set_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_timeout(%struct.cyclades_port* %0, i64 %1) #0 {
  %3 = alloca %struct.cyclades_port*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.cyclades_card*, align 8
  %6 = alloca i64, align 8
  store %struct.cyclades_port* %0, %struct.cyclades_port** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.cyclades_port*, %struct.cyclades_port** %3, align 8
  %8 = getelementptr inbounds %struct.cyclades_port, %struct.cyclades_port* %7, i32 0, i32 0
  %9 = load %struct.cyclades_card*, %struct.cyclades_card** %8, align 8
  store %struct.cyclades_card* %9, %struct.cyclades_card** %5, align 8
  %10 = load %struct.cyclades_card*, %struct.cyclades_card** %5, align 8
  %11 = call i32 @cy_is_Z(%struct.cyclades_card* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %27, label %13

13:                                               ; preds = %2
  %14 = load %struct.cyclades_card*, %struct.cyclades_card** %5, align 8
  %15 = getelementptr inbounds %struct.cyclades_card, %struct.cyclades_card* %14, i32 0, i32 0
  %16 = load i64, i64* %6, align 8
  %17 = call i32 @spin_lock_irqsave(i32* %15, i64 %16)
  %18 = load %struct.cyclades_port*, %struct.cyclades_port** %3, align 8
  %19 = load i32, i32* @CyRTPR, align 4
  %20 = load i64, i64* %4, align 8
  %21 = and i64 %20, 255
  %22 = call i32 @cyy_writeb(%struct.cyclades_port* %18, i32 %19, i64 %21)
  %23 = load %struct.cyclades_card*, %struct.cyclades_card** %5, align 8
  %24 = getelementptr inbounds %struct.cyclades_card, %struct.cyclades_card* %23, i32 0, i32 0
  %25 = load i64, i64* %6, align 8
  %26 = call i32 @spin_unlock_irqrestore(i32* %24, i64 %25)
  br label %27

27:                                               ; preds = %13, %2
  ret i32 0
}

declare dso_local i32 @cy_is_Z(%struct.cyclades_card*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @cyy_writeb(%struct.cyclades_port*, i32, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
